# nn-expt

./: .gitignore  README.md  pyproject.toml
experiments/seq2seq/: embedding.py  embedding_1.yml  linear.py  linear_1.yml  main.py  rnn.py  rnn_decoder.py  rnn_decoder_1.yml  rnn_encoder.py  rnn_encoder_1.yml
experiments/seq2seq/config/: linear_1.yml  rnn_1.yml  rnn_decoder_sweep_1.yml  rnn_encoder_sweep_1.yml
experiments/seq2seq/linear/: linear_1.yml  linear_sample.yml  sample.yml  search.yml
experiments/seq2seq/rnn/: rnn_decoder_1.yml  rnn_decoder_sample.yml  rnn_decoder_sweep_1.yml  rnn_encoder_1.yml  rnn_encoder_sample.yml  rnn_encoder_sweep_1.yml
experiments/seq2seq/rnn_decoder/: search.yml
experiments/seq2seq/rnn_encoder/: sample.yml  search.yml
experiments/seq2seq2seq/: linear_linear.py  linear_linear_1.yml  linear_rnn.py  main.py
experiments/tuple_autoencoder/: callback.py  data_module.py  expt_just_embedding.py  expt_linear.py  expt_linear_reinforce.py  expt_reinforce.py  expt_rnn.py  expt_sequential_rnn.py  expt_vae.py  tuple_autoencoder.py
expt/: tuple_autoencoder.ipynb
expts/seq2seq2seq_embedding_embedding/: 1.yml  main.py
expts/seq2seq2seq_mlp_mlp/: main.py  sample.yml
expts/seq2seq_embedding/: 1.yml  main.py
expts/seq2seq_mlp/: 1.yml  main.py
old/experiment/: __init__.py  seq2seq.py  seq2seq2seq.py
old/nn/: __init__.py  seq2seq_linear.py  seq2seq_mlp.py
old/seq2seq/rnn_decoder/: sample.yml
old/seq2seq2seq/: main.py
old/system/: __init__.py  seq2seq.py  seq2seq2seq.py
src/nn_expt/: __init__.py  optimize.py  utils.py
(+63 files in other folders)
